--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "globals": {
+      "__DEV__": true
+    },
+    "testRegex": "./test/.*.spec.js$",
+    "rootDir": "."
+  },
   "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "start": "webpack-dev-server --mode development --content-base src --inline --hot"
   },
   "keywords": [],
@@ -11,27 +20,34 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "mobx": "^2.3.7",
-    "mobx-react": "^3.5.1",
+    "mobx": "^5.7.0",
+    "mobx-react": "^5.4.2",
     "node-fetch": "^2.3.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.3.0"
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-decorators": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "react-addons-test-utils": "^15.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^4.24.0",
